--- a/index.html
+++ b/index.html
@@ -72,13 +72,20 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/me_header_250.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">Adam Libonatti-Roche</h1>
                         <hr class="star-light">
                         <span class="skills">Freelance Social Media Strategist</span>
-                        <p>Hey all, this site is a temporary one whilst I work on a super fun time new site. There's a bit on here about me as you can see from the About section. Ain't that swell</p>
-                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="row top-buffer">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>I really, really do like coffee and if you want to chat about anything, then let's go for one. Gone from a Latte to a Flat White sort of guy and Nescafé is my nemesis.</p>
+                </div>
+                <div class="col-lg-4">
+                  <p>Also, this website is temporary whilst I update it with all the bells and whistles that a past web developer should have e.g. a Tony Stark-esque bot to answer your questions</p>
                 </div>
             </div>
         </div>
