--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">LinkedIn</a>
+                        <a href="https://medium.com/@baconchin" target="_blank" title="">Words (Medium)</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Words (Medium)</a>
+                        <a href="https://www.linkedin.com/in/adamlibonattiroche/" target="_blank" title="Adam Libonatti-Roche LinkedIn">LinkedIn</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contactForm">Contact Me</a>
@@ -81,12 +81,21 @@
                 </div>
             </div>
             <div class="row top-buffer">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I really, really do like coffee and if you want to chat about anything, then let's go for one. Gone from a Latte to a Flat White sort of guy and Nescafé is my nemesis.</p>
+                <div class="col-lg-12">
+                    <p>The above image was taken when I was contemplating social media in a meditative form.</p>
                 </div>
-                <div class="col-lg-4">
-                  <p>Also, this website is temporary whilst I update it with all the bells and whistles that a past web developer should have e.g. a Tony Stark-esque bot to answer your questions</p>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <p>Also, <span class="sidenote">sidenote</span> this website is temporary whilst I update it with all the bells and whistles that a past web developer should have e.g. a Tony Stark-esque bot to answer your questions</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <a href="#" class="btn btn-lg btn-outline">
+                      <i class="fa fa-download"></i> Download CV
+                  </a>
+              </div>
             </div>
         </div>
     </header>
@@ -95,7 +104,7 @@
 
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <!-- <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -105,10 +114,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Adam is a Social Media Strategist who has worked for some of the biggest and best brands.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>As a creative producer, </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -117,7 +126,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact">
@@ -199,8 +208,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About Adam</h3>
+                        <p>Adam is a Freelance Social Media Strategist who has worked for some of the biggest brands in the UK. He's also a wrestling fan.</p>
                     </div>
                 </div>
             </div>
@@ -209,7 +218,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Adam Libonatti-Roche 2017
                     </div>
                 </div>
             </div>
