--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="The portfolio of Adam Libonatti-Roche. Website in construction">
     <meta name="author" content="">
 
     <title>Adam Libonatti-Roche - Baconchin</title>
-
+    <link rel="shortcut icon" href=".ico">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -87,7 +87,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <p>Also, <span class="sidenote">sidenote</span> this website is temporary whilst I update it with all the bells and whistles that a past web developer should have e.g. a Tony Stark-esque bot to answer your questions</p>
+                <p>Also, <span class="sidenote">sidenote</span> this website is temporary whilst I update it with all the bells and whistles that a past web developer should have e.g. a Tony Stark-esque bot to answer your questions.</p>
               </div>
             </div>
             <div class="row">
@@ -200,10 +200,10 @@
                                 <a href="http://twitter.com/baconchin" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/adamlibonattiroche/" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-medium"></i></a>
+                                <a href="https://medium.com/@baconchin" class="btn-social btn-outline"><span class="sr-only">Medium</span><i class="fa fa-fw fa-medium"></i></a>
                             </li>
                         </ul>
                     </div>
