--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Adam Libonatti-Roche - Baconchin</title>
-    <link rel="shortcut icon" href=".ico">
+    <link rel="shortcut icon" href="./img/favicon.ico">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -91,9 +91,14 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <a href="#" class="btn btn-lg btn-outline">
+              <div class="col-lg-3 col-lg-offset-3 text-center">
+                  <a href="./docs/thebestcvyouhavedownloaded.pdf" class="btn btn-lg btn-outline">
                       <i class="fa fa-download"></i> Download CV
+                  </a>
+              </div>
+              <div class="col-lg-3 text-center">
+                  <a href="mailto:adamlibonattiroche@gmail.com?subject=I%20came%from%20your%20website" class="btn btn-lg btn-outline">
+                      <i class="fa fa-envelope-o"></i> Contact Me
                   </a>
               </div>
             </div>
@@ -129,7 +134,7 @@
     </section> -->
 
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -139,8 +144,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -181,7 +185,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
