--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </a>
               </div>
               <div class="col-lg-3 text-center">
-                  <a href="mailto:adamlibonattiroche@gmail.com?subject=I%20came%from%20your%20website" class="btn btn-lg btn-outline">
+                  <a href="mailto:adamlibonattiroche@gmail.com?subject=Hello" class="btn btn-lg btn-outline">
                       <i class="fa fa-envelope-o"></i> Contact Me
                   </a>
               </div>
